first touches to the cv website

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -2,9 +2,7 @@
   url: /
 - title: Projects
   url: /projects
-- title: Articles
-  url: /articles
-- title: Videos
-  url: /videos
-- title: Wins
-  url: /wins
+- title: Testimonials
+  url: /
+- title: Contact
+  url: /
