added my info, prokects, people name, company logos

--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -1,24 +1,24 @@
-- name: Thalen Abadia
-  role: Editor @ [Genics Blog](https://genicsblog.com)
-  text: Gourav always surprises me with how talented he is as a programmer. Since we met he has kept taking on challenges that I would never even think of trying. He is one of the hardest working person I know, and a great person to work with as a team member and as a friend.
+- name: Juneau Dahl
+  role: Co-Founder @ [CodeRacer](https://www.coderacer.xyz/)
+  text: Gaspar consistently impresses me with his programming skills. Since we met, he has tackled many challenging tasks with dedication and enthusiasm. He is a hardworking individual and a reliable team member.
   picture: "/assets/images/avatars/thalen-abadia.webp"
 
-- name: Devashish Mamgain
+- name: Frederic Somm
   role: CEO @ [Kommunicate.io](https://kommunicate.io)
-  text: "It's amazing to see Gourav's fast learning skills and good code quality at such a young age. Keep up the good work and keep surprising us with your achievements!"
+  text: "Gaspar's quick learning and solid code quality are truly commendable. Keep up the good work and continue to impress us with your progress!"
   picture: "/assets/images/avatars/devashish-mamgain.webp"
 
-- name: Kushagra Jain
+- name: Arol Viñolas (?)
   role: Co-Organizer [Code-19](https://code19-contest.github.io/website/)
-  text: "Gourav is one of the most hard-working people I have ever met. He is the all in one tech support anyone could refer to. From website to app development, he knows all and never stops learning. He's a great friend, keen thinker and a team worker."
+  text: "Gaspar is one of the most dedicated individuals I know. He has a wide range of tech skills, from website to app development, and is always eager to learn more."
   picture: "/assets/images/avatars/kushagra-jain.webp"
 
-- name: Atharva Deosthale
+- name: Manel Soler Cruz (?)
   role: Developer and Content Creator
-  text: "Gourav is an amazing developer with a lot of different side-interests. Genics blog is an example, he combined his programming and technical writing skills to create something which is actually helpful for the real world. Definitely recommend his expertise for any project!"
+  text: "Gaspar is a talented developer with a variety of interests. Bug-Buster showcases how he and his colleagues effectively combined their programming skills to create a practical solution. I highly recommend his expertise for any project."
   picture: "/assets/images/avatars/atharva-deosthale.webp"
 
-- name: Anushka Sharad
+- name: Olga Shirokova (?)
   role: Founder @ [seekinspace.com](http://seekinspace.com)
-  text: "When I crossed paths with Gourav, I did not only get a good friend but also found a man who never fails to influence me. I'm stunned by his zeal toward programming. His creations are unique. He's always dreamt of creating something new, and he's striving to achieve that. He's breaking the paradigm of society and setting a new impact."
+  text: "When I met Gaspar, I discovered a dedicated and skilled programmer. His passion for programming is evident in his unique projects. He is always working towards creating something new and impactful."
   picture: "/assets/images/avatars/anushka-sharad.webp"
